--- a/contact/contact.html
+++ b/contact/contact.html
@@ -13,6 +13,21 @@
       </nav>
     </header>
     <main>
+      <div class="contact-container">
+        <form action="" class="contact-left">
+          <div class="contact-left-title">
+            <h2>Contact Us</h2>
+            <hr>
+          </div>
+        </form>
+        <input type="text" name="name" placeholder="First Name" class="contact-inputs" required>
+        <input type="email" name="email" placeholder="Email Address" class="contact-inputs" required>
+        <textarea name="" placeholder="Message" class="contact-inputs" required></textarea>
+        <button type="submit">Submit<i class="fa-solid fa-envelope"></i></button>
+        <div class="contact-right">
+          <img src="" alt="">
+        </div>
+      </div>
     </main>
     <footer>
       <p>&copy; 2025 LDN. All Rights Reserved</p>
