--- a/services/services.html
+++ b/services/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services | LDN</title>
     <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/services.css" />
     <script src="https://kit.fontawesome.com/a977cb27e6.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -13,6 +14,99 @@
       </nav>
     </header>
     <main>
+      <main>
+
+  <!-- ===== HERO ===== -->
+  <section id="services-hero">
+    <div class="services-hero-content">
+      <h1>Our Areas of Practice</h1>
+      <p>Providing trusted, client-focused legal support across a wide range of services.</p>
+    </div>
+  </section>
+
+  <!-- ===== INTRODUCTION ===== -->
+  <section id="services-intro">
+    <div class="container">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. We focus on delivering professional, transparent, and compassionate legal solutions to our clients in South Africa.</p>
+    </div>
+  </section>
+
+  <!-- ===== INDIVIDUAL PRACTICE AREAS ===== -->
+  <section id="practice-areas">
+    <div class="container">
+
+      <article class="practice-area">
+        <div class="practice-image">
+          <img src="../images/civil-litigation.jpg" alt="Civil Litigation">
+        </div>
+        <div class="practice-content">
+          <h2>Civil Litigation</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. We handle disputes, contractual issues, and civil matters with professionalism and care.</p>
+        </div>
+      </article>
+
+      <article class="practice-area reverse">
+        <div class="practice-image">
+          <img src="../images/conveyancing.jpg" alt="Conveyancing">
+        </div>
+        <div class="practice-content">
+          <h2>Conveyancing</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. We guide clients through property transfers, contracts, and legal documentation smoothly and reliably.</p>
+        </div>
+      </article>
+
+      <article class="practice-area">
+        <div class="practice-image">
+          <img src="../images/labour-law.jpg" alt="Labour Law">
+        </div>
+        <div class="practice-content">
+          <h2>Labour Law Disputes</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. We protect your rights in employment disputes, contract issues, and workplace challenges.</p>
+        </div>
+      </article>
+
+      <article class="practice-area reverse">
+        <div class="practice-image">
+          <img src="../images/notary.jpg" alt="Notary Services">
+        </div>
+        <div class="practice-content">
+          <h2>Notary Services</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Our team provides notarization, affidavits, and document certification with precision and care.</p>
+        </div>
+      </article>
+
+      <article class="practice-area">
+        <div class="practice-image">
+          <img src="../images/deceased-estates.jpg" alt="Deceased Estates">
+        </div>
+        <div class="practice-content">
+          <h2>Deceased Estates & Estate Planning</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. We help families manage estates, wills, and succession planning with clarity and compassion.</p>
+        </div>
+      </article>
+
+      <article class="practice-area reverse">
+        <div class="practice-image">
+          <img src="../images/community.jpg" alt="Community Representation">
+        </div>
+        <div class="practice-content">
+          <h2>Community Representation</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. We actively support and represent local communities, offering accessible legal guidance and advocacy.</p>
+        </div>
+      </article>
+
+    </div>
+  </section>
+
+  <!-- ===== CTA ===== -->
+  <section id="services-cta">
+    <h2>Need Legal Assistance?</h2>
+    <p>Contact our professional legal team for guidance or representation today.</p>
+    <a href="../contact/contact.html" class="cta-btn">Get in Touch</a>
+  </section>
+
+</main>
+
     </main>
     <footer>
       <p>&copy; 2025 LDN. All Rights Reserved</p>
