--- a/about/about.html
+++ b/about/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About| LDN</title>
     <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/about.css" />
     <script src="https://kit.fontawesome.com/a977cb27e6.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -12,19 +13,31 @@
       <nav class="nav-container"></nav>
     </header>
     <main>
-      <h1>About Us</h1>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur tempus faucibus. Curabitur eu sagittis
-        ex. Nulla facilisi. Curabitur a efficitur odio, at cursus ex. Maecenas ultricies, lorem vitae varius ultrices,
-        nisl orci consectetur justo, sit amet imperdiet mi felis eget urna. Aliquam eget sem eu ligula malesuada tempor
-        scelerisque quis dui. Fusce at ultricies urna. Ut ac euismod turpis, id vehicula lectus. Curabitur lacinia
-        vestibulum mauris, eu ornare leo bibendum a. Fusce malesuada felis non metus pulvinar rutrum. Integer vel ipsum
-        volutpat, pulvinar eros sit amet, accumsan eros. Morbi facilisis nisi cursus justo ultricies viverra. Ut viverra
-        in nulla nec vehicula. Suspendisse dui ligula, efficitur vitae maximus et, pretium vitae erat. Nam imperdiet
-        ipsum vel consectetur condimentum. Cras finibus quis lorem sit amet convallis. Mauris a tortor non dolor
-        tincidunt consectetur non vitae enim. Nulla at interdum enim, in porta est. Sed facilisis cursus tortor et
-        mattis. Mauris in.
-      </p>
+      <div class="about-container">
+        <h1>About Us</h1>
+        <div class="about-content">
+          <div class="about-text">
+            
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In consectetur tempus faucibus. Curabitur eu
+              sagittis ex. Nulla facilisi. Curabitur a efficitur odio, at cursus ex. Maecenas ultricies, lorem vitae
+              varius ultrices, nisl orci consectetur justo, sit amet imperdiet mi felis eget urna. Aliquam eget sem eu
+              ligula malesuada tempor scelerisque quis dui. Fusce at ultricies urna. Ut ac euismod turpis, id vehicula
+              lectus. Curabitur lacinia vestibulum mauris, eu ornare leo bibendum a.
+            </p>
+            <p>
+              Fusce malesuada felis non metus pulvinar rutrum. Integer vel ipsum volutpat, pulvinar eros sit amet,
+              accumsan eros. Morbi facilisis nisi cursus justo ultricies viverra. Ut viverra in nulla nec vehicula.
+              Suspendisse dui ligula, efficitur vitae maximus et, pretium vitae erat. Nam imperdiet ipsum vel
+              consectetur condimentum. Cras finibus quis lorem sit amet convallis. Mauris a tortor non dolor tincidunt
+              consectetur non vitae enim. Nulla at interdum enim, in porta est. Sed facilisis cursus tortor et mattis.
+              Mauris in.
+            </p>
+          </div>
+
+          <div class="about-image"></div>
+        </div>
+      </div>
     </main>
     <footer>
       <p>&copy; 2025 LDN. All Rights Reserved</p>
