--- a/contact/contact.html
+++ b/contact/contact.html
@@ -47,7 +47,7 @@
             <option value="Divorces">DIVORCES</option>
           </select>
           <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
-          <button type="submit">Send Message<i class="fa-solid fa-envelope"></i></button>
+          <button type="submit">Contact Us<i class="fa-solid fa-envelope"></i></button>
         </form>
       </div>
     </main>
