--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </p>
             <a href="#" class="cta-btn">View Our Services</a>
           </div>
+          <div class="banner-overlay"></div>
           <img
             class="hero-bg"
             src="images/banner/hennie-stander-uL_2nhIOvfM-unsplash.jpg"
@@ -42,6 +43,7 @@
             </p>
             <a href="#" class="cta-btn">Learn About Our Firm</a>
           </div>
+          <div class="banner-overlay"></div>
           <img
             class="hero-bg"
             src="images/banner/pexels-nicola-barts-7927545.jpg"
@@ -59,6 +61,7 @@
             </p>
             <a href="#" class="cta-btn">Get Legal Help</a>
           </div>
+          <div class="banner-overlay"></div>
           <img
             class="hero-bg"
             src="images/banner/rachel-martin-yHOhVzVRFMc-unsplash.jpg"
